orchestra-compiler/tests/invalid_task_arch_not_string.mlir
// RUN: not %orchestra-opt %s --verify-diagnostics 2>&1 | %FileCheck %s

"orchestra.schedule"() ({
  // CHECK: error: 'orchestra.task' op requires a string 'arch' key in the 'target' dictionary
  "orchestra.task"() <{target = { arch = 42 }}> ({
    "orchestra.return"() : () -> ()
  }) : () -> ()
  "orchestra.return"() : () -> ()
}) : () -> ()
